Created menu entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # datasource PostgreSQl
-spring.datasource.platform=postgres
+spring.sql.init.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/backend_eindopdracht
 spring.datasource.username=postgres
 spring.datasource.password=springboot
